--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,11 @@
       <div class="col-4 slogan">
         Splurting out unsolicited advice about entrepreneurship since 2016
       </div>
-      <div class="col-5">
+      <div class="col-5 links">
           <!-- Button trigger modal -->
           <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
 
-        </button>
+       
         <%= link_to 'About', about_path %>
       </div>
     </header>
@@ -50,14 +50,19 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">×</span>
             </button>
-            <h4 class="modal-title" id="myModalLabel">Contribute Your Quote</h4>
+            <h4 class="modal-title" id="myModalLabel">Contribute your quote</h4>
           </div>
-          <div class="modal-body">
-            ...
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+          
+              <%= simple_form_for Quote.new do |f| %>
+              <div class="modal-body">
+                  <%= f.input :saying %>
+                  <%= f.input :author %>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <%= f.submit 'Create', class: 'btn btn-danger' %>
+              </div>
+            <% end %>
           </div>
         </div>
       </div>
